feat: 初始化网关可视化控制台，实现路由列表展示
1. 前端架构：初始化 Vue 3 + Vite + Element Plus 项目脚手架。
2. 功能实现：完成路由管理页面的基础开发，实现从后端拉取并展示 Nacos 路由列表。
3. 网关后端：新增 CorsConfig 配置类，解决前后端分离跨域问题。
4. 网关后端：集成 Actuator 并暴露监控端点，为仪表盘开发做准备。
5. 联调验证：打通 前端 -> 网关 -> Nacos 的数据读取链路。

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -76,6 +76,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Knife4j -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
+        <!-- 暴露监控端点 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- 响应式 Redis 依赖 (Gateway 是 WebFlux，必须用 reactive 版本) -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
