--- a/service-consumer/pom.xml
+++ b/service-consumer/pom.xml
@@ -65,6 +65,13 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Spring Boot 3.x 专用 Knife4j 依赖 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.3.0</version>
+        </dependency>
     </dependencies>
 
     <!-- 3. 新增：这是最关键的部分！依赖管理 (BOM) -->
