--- a/service-provider/pom.xml
+++ b/service-provider/pom.xml
@@ -88,6 +88,13 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Spring Boot 3.x 专用 Knife4j 依赖 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
