--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -76,11 +76,18 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Knife4j -->
+        <!-- Knife4j 聚合别人的 api 文档 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
             <version>4.3.0</version>
+        </dependency>
+
+        <!-- (纯 API 版，只生成 JSON，不带界面) -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-api</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
         <!-- 暴露监控端点 -->
