--- a/service-common/pom.xml
+++ b/service-common/pom.xml
@@ -49,6 +49,14 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <optional>true</optional> <!-- optional表示谁引用我，谁才需要这个 -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
