--- a/service-consumer/src/main/resources/application.yml
+++ b/service-consumer/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8083
 
-# ▼▼▼ 必须加上这一坨 ▼▼▼
+# 必须加上这一坨
 spring:
   application:
     name: service-consumer  # 1. 给自己起个名，网关就是按这个名字找你的
