--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -27,13 +27,23 @@ spring:
       transport:
         dashboard: localhost:8090 # Sentinel 控制台地址
       datasource: # 【持久化】告诉 Sentinel：规则别存在内存里，去 Nacos 读 json 文件
+        # 1. 流控规则 (限流)
         gateway-flow-rules:
           nacos:
             server-addr: 127.0.0.1:8848
-            data-id: gateway-sentinel-rule.json
+            data-id: gateway-sentinel-flow.json
             group-id: DEFAULT_GROUP
             data-type: json
             rule-type: gw-flow # 指定规则类型为“网关流控”
+        # 2. 降级规则 (熔断)
+        gateway-degrade-rules:
+          nacos:
+            server-addr: 127.0.0.1:8848
+            data-id: gateway-sentinel-degrade.json # 名字叫：degrade
+            group-id: DEFAULT_GROUP
+            data-type: json
+            rule-type: degrade  # 规则类型必须是 degrade
+
 springdoc:
   api-docs:
     enabled: true  # 开启文档生成功能
