feat: 集成 RabbitMQ 实现网关异步访问日志与审计系统
1. 架构升级：新增 service-log 日志服务模块，构建“网关(生产者)-MQ-日志服务(消费者)”的异步解耦架构。
2. 网关层：实现 LogGlobalFilter 全局过滤器，采用 Fire-and-Forget 模式将请求快照异步投递至 RabbitMQ，消除数据库 I/O 对网关性能的影响。
3. 基础设施：配置 Jackson2JsonMessageConverter 解决跨服务序列化乱码问题；封装 GatewayLogDTO 并迁移至 common 模块实现复用。
4. 存储层：集成 MyBatis-Plus 实现日志数据的持久化存储，并解决实体类与数据库表名的映射问题。
5. 验证：全链路打通 Request -> Gateway -> MQ -> Service-Log -> MySQL 的日志落库流程。

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -144,6 +144,13 @@
             <!-- 👇 修改这里：改成和父工程一样的 1.0.0，或者用变量 -->
             <version>1.0.0</version>
         </dependency>
+
+        <!-- api-gateway/pom.xml -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
