--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>service-provider</module>
         <module>service-consumer</module>
         <module>service-common</module>
+        <module>service-log</module>
     </modules>
 
     <!-- 父工程统一管理 Spring Boot 版本 -->
