feat(sentinel): 实现Sentinel流控与熔断规则的持久化配置管理
1. 后端核心 (Backend)
- 新增 FlowRule/DegradeRule 实体类及 VO 聚合对象，解决 JSON 序列化兼容问题
- 实现 SentinelService 业务逻辑，支持 Nacos 多配置文件(限流/降级)的聚合读取与写入
- 完成 SentinelController 接口开发，提供规则的增删改查 API

2. 前端功能 (Frontend)
- 新增“流量防卫控制台”模块，封装 Sentinel 相关 API
- 摒弃传统表格，采用“卡片矩阵”展示资源防护状态(限流/熔断)
- 实现抽屉式(Drawer)规则编辑器，支持配置 QPS、预热、慢调用比例等高级策略

3. 界面优化 (UI/UX)
- 重构全局布局，集成深色/浅色主题切换与导航栏磨砂玻璃效果
- 优化路由转场动画，提升交互体验

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -52,6 +52,13 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- 全局热部署配置 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <!-- 【核心区别】网关专用依赖！千万别加 starter-web！ -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
