feat(dashboard): 完成流量驾驶舱全链路监控与运维管控功能
1. 后端核心
- 实现网关全局流量埋点：基于 Redis 统计实时 QPS、平均延迟与错误率
- 集成 SkyWalking：通过 GraphQL 查询服务拓扑，实现后端数据代理
- 新增运维控制接口：支持路由刷新(Refresh)、黑名单WAF、日志采样(Sample)与缓存清理
- 实现拦截日志采集：统一捕获鉴权失败与 Sentinel 限流熔断事件，异步写入 Redis List

2. 前端可视化
- 重构驾驶舱 UI：采用赛博朋克风格，集成 ECharts 迷你波形图与环形图
- 实现动态拓扑图：基于 ECharts Graph 展示微服务调用关系与节点状态
- 新增实时看板：Top 路由排行、拦截日志滚动终端
- 交互优化：运维按钮对接真实接口，支持一键开关防火墙与路由热更新

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -83,6 +83,12 @@ knife4j:
         context-path: /service-provider
         order: 3
 
+      - name: 日志服务 (Log)
+        url: /service-log/v3/api-docs
+        service-name: service-log
+        context-path: /service-log
+        order: 4
+
 management:  #【监控探针】
   endpoints:
     web:
@@ -91,3 +97,7 @@ management:  #【监控探针】
   endpoint:
     health:
       show-details: always
+
+skywalking:
+  oap:
+    url: http://localhost:12800  # SkyWalking OAP 地址
