--- a/gateway-dashboard/package.json
+++ b/gateway-dashboard/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
+    "devicon": "^2.17.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.13.0",
-    "vue": "^3.5.24",
+    "three": "^0.182.0",
+    "vue": "^3.4.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify/icons-simple-icons": "^1.1.93",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "unplugin-icons": "^0.18.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.4.0"
   }
 }
