--- a/service-log/pom.xml
+++ b/service-log/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <!-- Spring Boot 3.x 专用 Knife4j 依赖 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
         <!-- 👇【核心修复 1】MySQL 驱动 (必须加版本号) -->
         <dependency>
             <groupId>com.mysql</groupId>
